# SwiftCU

./: .gitignore  CMakeLists.txt  Package.swift  README.md
Sources/SwiftCU/: SwiftCU.swift  SwiftCUBase.swift  SwiftCUDABase.swift
Sources/SwiftCU/CUDATypes/: CUDADataTypeEnum.swift  CUDAError.swift  CUEnumTypes.swift  CUError.swift
Sources/SwiftCU/CUDAUtils/: CUDAUtils.swift  CUUtils.swift
Sources/SwiftCU/genericUtils/: genericUtils.swift
Sources/cxxCU/: add.cu  module.modulemap
Sources/cxxCU/include/: cuhead.hpp
Sources/cxxCu/: module.modulemap
Sources/cxxCu/include/: cuhead.hpp
Sources/cxxCu/testKernel/: add.cu  main.cu
Tests/SwiftCUTests/: CUDABasicTests.swift  CUDAKernelTests.swift  CUDAMallocTests.swift  CUDAMemoryTests.swift
docs/: CNAME  metadata.json  theme-settings.json
docs/data/documentation/: swiftcu.json
docs/data/documentation/swiftcu/: cudaerror.json  cudakernel.json  cudakernelarguments.json  cudamemorycopytype.json  cudastream.json  cudevice.json  cumemory.json  cxxcu.json  swift.json
docs/data/documentation/swiftcu/cudaerror/: !=(_:_:).json  ==(_:_:).json  cudaerroraddressofconstant.json  cudaerroralreadyacquired.json  cudaerroralreadymapped.json  cudaerrorapifailurebase.json  cudaerrorarrayismapped.json  cudaerrorassert.json  cudaerrorcallrequiresnewerdriver.json  cudaerrorcapturedevent.json  cudaerrorcdpnotsupported.json  cudaerrorcdpversionmismatch.json  cudaerrorcompatnotsupportedondevice.json  cudaerrorcontextisdestroyed.json  cudaerrorcooperativelaunchtoolarge.json  cudaerrorcudartunloading.json  cudaerrordevicealreadyinuse.json  cudaerrordevicenotlicensed.json  cudaerrordevicesunavailable.json  cudaerrordeviceuninitialized.json  cudaerrorduplicatesurfacename.json  cudaerrorduplicatetexturename.json  cudaerrorduplicatevariablename.json  cudaerroreccuncorrectable.json  cudaerrorexternaldevice.json  cudaerrorfilenotfound.json  cudaerrorgraphexecupdatefailure.json  cudaerrorhardwarestackerror.json  cudaerrorhostmemoryalreadyregistered.json  cudaerrorhostmemorynotregistered.json  cudaerrorillegaladdress.json  cudaerrorillegalinstruction.json  cudaerrorillegalstate.json  cudaerrorincompatibledrivercontext.json  cudaerrorinitializationerror.json  cudaerrorinsufficientdriver.json  cudaerrorinvalidaddressspace.json  cudaerrorinvalidchanneldescriptor.json  cudaerrorinvalidclustersize.json  (+99 more)
docs/index/: index.json
scripts/: generate_lib_datatype.py  replace.py
(+54 files in other folders)
