cmake_minimum_required(VERSION 3.25)

if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
  set(CMAKE_CUDA_ARCHITECTURES 86)
endif()

project(MyCudaProject LANGUAGES CUDA)

set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_STANDARD_REQUIRED True)
set(CMAKE_CUDA_EXTENSIONS OFF) 
set(CMAKE_CUDA_RUNTIME_LIBRARY Static)

file(GLOB CUDA_FILES "Sources/cxxCU/*.cu")

add_library(cudaObjLib OBJECT ${CUDA_FILES})

add_library(cuADD STATIC
    $<TARGET_OBJECTS:cudaObjLib>
)

set_target_properties(cuADD PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Sources/cxxCU/lib"
)